# SC-FC_coupling

./: .gitignore  LICENSE  README.md  pyproject.toml
scfc/: __init__.py  cli.py  config.py  coupling.py  functional.py  robustness.py  structural.py  viz.py
scripts/: run_all.py
