[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scfc-coupling"
version = "0.1.0"
description = "Cross-parcellation SC-FC coupling robustness analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "nibabel>=5.0",
    "nilearn>=0.10",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
neuromaps = ["neuromaps>=0.0.4"]
dev = ["pytest", "jupyterlab"]

[project.scripts]
scfc-run = "scfc.cli:main"

[tool.setuptools.packages.find]
include = ["scfc*"]
